--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <p>
                 Put a file named <a href=""></a>
             </p>
+            <p>My project</p>
 
         </div>
     </div>
